k8s/base/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
          name: http
        - containerPort: 53
          protocol: TCP
          name: dns-tcp
        - containerPort: 53
          protocol: UDP
          name: dns-udp
        - containerPort: 67
          protocol: UDP
          name: dhcp
        resources:
          limits:
            memory: 512Mi
            cpu: "0.3"
          requests:
            memory: 256Mi
            cpu: "0.1"
        volumeMounts:
        - name: pihole-etc
          mountPath: /etc/pihole
        - name: dnsmasq-etc
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: pihole-etc
        persistentVolumeClaim:
          claimName: pihole-etc-pvc
      - name: dnsmasq-etc
        persistentVolumeClaim:
          claimName: dnsmasq-etc-pvc
      dnsConfig:
        options:
          - name: ndots
            value: "1"
