k8s/base/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    name: http
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  - port: 67
    targetPort: 67
    protocol: UDP
    name: dhcp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    name: http
